# churn-prediction-app

./: Makefile  README.md  pyproject.toml
.streamlit/: config.toml
app/: app.py
models/: encoder.joblib  model.joblib  scaler.joblib
pipelines/: churn_pipeline.py
