[project]
name = "churn-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhonatas Silva",email = "jhonatasassumpcao@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "joblib (>=1.5.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "scikit-learn (==1.6.1)",
    "scipy (>=1.16.0,<2.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
blue = "^0.9.1"
pip-audit = "^2.9.0"
pydocstyle = "^6.3.0"

